<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_emerald"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_search_bar"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/folderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFolders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddFolder"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_folder"
            android:textColor="@color/primary_emerald" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDocuments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adViewContainer"
        android:layout_below="@id/folderBar"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2" />

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="No documents found.\nTap + to scan a document!"
        android:textAlignment="center"
        android:textColor="@color/slate_500"
        android:textSize="16sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adViewContainer"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary_emerald"
        android:text="@string/scan_now"
        android:textColor="@color/white"
        app:icon="@android:drawable/ic_menu_camera"
        app:iconTint="@color/white" />

    <!-- AdMob Banner Container -->
    <FrameLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/card_bg" />

</RelativeLayout>
